# llm-route-meter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  examples.md  ingest-adapters.md  limitations.md  trust-model.md  what-we-record.md
examples/: generated_route_ledger.json  mock_eval.json  mock_events.jsonl  mock_report.html
examples/ingest/: langfuse_observations.json  litellm_spend_logs.jsonl  openai_usage_export.json  source_with_payload.json
lab/: scenarios.json
proxy/: openai_meter_proxy.py
schemas/: meter_event_schema_v1.json  route_ledger_schema_v1.json
scripts/: verify_no_payload_leak.py
src/llm_route_meter/: __init__.py  cli.py  constants.py  fingerprint.py  guard.py  mock_lab.py  report.py  summarize.py  writer.py
src/llm_route_meter/adapters/: __init__.py  common.py  langfuse.py  litellm.py  openai_usage.py
src/llm_route_meter/wrappers/: openai.py
tests/: test_ingest_adapters.py  test_no_payload_leak.py  test_schema_guard.py
