[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-route-meter"
version = "0.1.0"
description = "Local metadata-only meter for OpenAI-compatible LLM routes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "LLM Route Meter contributors" }]
keywords = ["llm", "observability", "metadata", "cost", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
llm-route-meter = "llm_route_meter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
